tests/syntax_error/self_outside_class.jou
def foo(self) -> void:  # Error: 'self' cannot be used here
    return
